# credit_score

./: .gitignore  DESIGN.md  GEMINI.md  LICENSE  README.md  TODO.md  docker-compose.yaml  main.py
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  mypy.ini  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/tests/: conftest.py  test_api_integration.py  test_rating_logic.py
db/: README.md  init.sql
frontend/: Dockerfile  mypy.ini  pyproject.toml
frontend/app/: main.py  utils.py
frontend/tests/e2e/: test_dashboard.py
infra/: main.tf  resources.tf
scripts/: migrate.py
