[project]
name = "credit-score-backend"
version = "0.1.0"
description = "FastAPI backend for IRB Credit Rating Engine"
authors = [{ name = "Analyst", email = "analyst@example.com" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.43.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pytest==9.0.2",
    "python-multipart==0.0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
