[project]
name = "credit-score-frontend"
version = "0.1.0"
description = "Streamlit dashboard for IRB Credit Rating Engine"
authors = [{ name = "Analyst", email = "analyst@example.com" }]
requires-python = ">=3.14"
dependencies = [
    "streamlit==1.56.0",
    "pandas==3.0.2",
    "requests==2.33.0",
    "plotly==6.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-playwright>=0.6.2",
]
