[project]
name = "credit-score-frontend"
version = "0.1.0"
description = "Streamlit dashboard for IRB Credit Rating Engine"
authors = [{ name = "Analyst", email = "analyst@example.com" }]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.14"
dependencies = [
    "streamlit==1.56.0",
    "pandas==3.0.2",
    "requests==2.33.0",
    "plotly==6.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "pytest-playwright>=0.6.2",
    "ruff>=0.15.9",
    "types-requests>=2.33.0.20260402",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
